syntax = "proto3";

package component.v1;

import "component/v1/messages.proto";

service ComponentsService {
  rpc GetComponent(component.v1.GetComponentRequest) returns (component.v1.GetComponentResponse) {}
  rpc GetComponentsByApp(component.v1.GetComponentsByAppRequest) returns (component.v1.GetComponentsByAppResponse) {}
  rpc DeleteComponent(component.v1.DeleteComponentRequest) returns (component.v1.DeleteComponentResponse) {}
  rpc UpsertComponent(component.v1.UpsertComponentRequest) returns (component.v1.UpsertComponentResponse) {}
}
